# Symbies

./: .gitignore  README.md  SymbieFalmilyBackstory.md  directory_contents.txt
FamilyBusiness_iChain/: KBF for this Directory.md
FamilyBusiness_iChain/ChoreList/: DailyResponsibilities.md  SkillBuildingTasks.md  TasksToImproveSkills.md
FamilyBusiness_iChain/CurrentProjects/: DAOFutureRoadmap.md  ProjectStatusUpdates.md  SGCTokenExpansionStrategy.md  UpcomingFeaturesList.md  iChainCoreDevelopmentPlan.md
FamilyCrewAI/: FamilyAIBuildPlan.md  README.md  pyproject.toml
FamilyCrewAI/logs/: logger.py
FamilyCrewAI/members/: __init__.py  base_member.py
FamilyCrewAI/src/: crew.py  main.py
FamilyCrewAI/tasks/: md_task.py
FamilyCrewAI/tests/: test_agents.py  test_tools.py
FamilyCrewAI/tools/: api_tool.py  env_tool.py  file_tool.py
FamilyHome/: FamilyBackstory.md  KBF for this Directory.md
FamilyHome/Governance/: EthicalAndAdaptiveGovernance.md  GovernanceAndTrust.md
FamilyHome/SharedFamilyCalendar/: SpecialDates.md
FamilyMembers/: KBF for this Directory.md  Tara_Legal_Aid
FamilyMembers/Alex_Strategist_ProjectManager/: PersonalityProfile.md
FamilyMembers/Casey_Orchestrator_BackendWizard/: PersonalityProfile.md
FamilyMembers/Ethan_TechGuru_BridgeBuilder/: PersonalityProfile.md
FamilyMembers/Gavin_Operator_PsychWarrior/: PersonalityProfile.md
FamilyMembers/Griffin_LegalEagle_NaturalLawyer/: PersonalityProfile.md
FamilyMembers/Jamie_Analyst_Debugger/: PersonalityProfile.md
FamilyMembers/Jordan_Enforcer_QualitySentinel/: PersonalityProfile.md
(+3 files in other folders)
