[tool.poetry]
name = "familycrewai"
version = "0.1.0"
description = "FamilyCrewAI using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = {extras = ["tools"], version = "^0.27.0"}

[tool.poetry.scripts]
familycrewai = "familycrewai.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"